# monte-cafe

./: .gitignore  CNAME  LICENSE  README.md  pyproject.toml
models/: distributions.py  markov_chain.py  mcmc.py  step_methods.py
notebooks/: 02 Simulated Annealing to Help The Salesman.ipynb  03 Discrete-Time Markov Chain.ipynb  05 Metropolis-Hastings Algorithm, Hills in The Distance.ipynb  05 Metropolis-Hastings Algorithm.ipynb  06 Parallel Tempering, The Hot Explorers.ipynb
notebooks/Markov Chain/: 01 Discrete-Time Markov Chain.ipynb  02 Stationary Distribution.ipynb
notebooks/Monte Carlo/: 01 The Circle-in-A-Square Model.ipynb
notebooks/outputs/: outputs.md
utils/: math_utils.py  utils.py  viz_utils.py
